# cpdx

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: affine.md  bayes.md  deformable.md  index.md  nonrigid.md  rigid.md  rnr.md  util.md
docs/documentation/: affine.md  bayes.md  deformable.md  util.md
src/cpdx/: __init__.py  _matching.py  _tree.py  affine.py  deformable.py  nonrigid.py  rigid.py  rnr.py  util.py
src/cpdx/bayes/: __init__.py  _private.py  kernel.py  normalization.py  util.py
test/: test_bcpd_burn_in.py  test_bcpd_comparison.py  test_bcpd_interpolate_variance.py  test_bcpd_masked_trim.py  test_bcpd_nonrigid_verification.py  test_bcpd_scale_invariance.py  test_cpd_affine.py  test_cpd_masked.py  test_cpd_nonrigid.py  test_cpd_rigid.py  test_cpd_weighted.py  test_gp_inversion.py  test_interpolate_variance.py  test_invert_gp_mapping.py  test_mask_weights_interaction.py  test_point_uncertainties.py  test_rnr.py  test_trim_with_mask.py
